--- a/css/style.css
+++ b/css/style.css
@@ -415,3 +415,126 @@ header {
 }
 
 /*Story End*/
+
+/*Footer Start*/
+footer {
+}
+footer .send-mail {
+  background-color: var(--bg-black);
+}
+footer .send-mail .text {
+  color: var(--white-color);
+
+  font-family: var(--font-primary);
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 117%;
+}
+footer .send-mail .form h3 {
+  color: var(--primary-color);
+
+  font-family: var(--font-primary);
+  font-size: 14.4px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+footer .send-mail .form input[type="email"] {
+  width: 100%;
+  background-color: transparent;
+  border: 2px solid var(--white-color);
+  padding: 9px 16px;
+}
+footer .send-mail .form input[type="email"]::placeholder,
+footer .send-mail .form input[type="email"] {
+  color: var(--white-color);
+  font-family: var(--font-primary);
+  font-size: 17.26px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+footer .send-mail .form button {
+  width: 100%;
+  background-color: var(--primary-color);
+  padding: 9px 0px;
+}
+footer .send-mail .form button span {
+  margin-right: 40px;
+  color: var(--bg-black);
+
+  font-family: var(--font-primary);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+footer .send-mail .form button i {
+  color: var(--bg-black);
+  transform: rotate(-45deg);
+}
+
+.bottom-footer {
+  background-color: var(--bg-gray);
+}
+.bottom-footer .mid {
+  border-bottom: 1px solid var(--gray-color);
+}
+.bottom-footer .logo {
+  width: 325px;
+}
+.bottom-footer .logo img {
+  width: 100%;
+}
+.bottom-footer .logo-text {
+  color: var(--gray-color);
+  text-align: right;
+  font-family: var(--font-secondary);
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.bottom-footer .links a,
+.bottom-footer .social-links a {
+  margin-bottom: 8px;
+  text-decoration: none;
+}
+.bottom-footer .social-links a {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.bottom-footer .links a,
+.bottom-footer .social-links span {
+  color: var(--white-color);
+
+  /* H6 */
+  font-family: var(--font-primary);
+  font-size: 14.4px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.bottom-footer .social-links i {
+  color: var(--white-color);
+
+  font-size: 14.4px;
+}
+.bottom-footer .bot span {
+  color: var(--white-color);
+}
+.bottom-footer .bot a,
+.bottom-footer .copyright {
+  color: var(--primary-color);
+
+  font-family: var(--font-secondary);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+/*Footer End*/
