--- a/css/about.css
+++ b/css/about.css
@@ -1,3 +1,21 @@
+:root {
+  --primary-color: #fff200;
+  --gray-color: #bfbfbf;
+  --white-color: #f2f2f2;
+  --warna-icon-color: #818181;
+  --bg-gray: #181616;
+  --bg-black: #090909;
+  --font-primary: "Poppins", sans-serif;
+  --font-secondary: "Nunito", sans-serif;
+  --font-title: "Syncopate", sans-serif;
+  --border-bottom: 1px solid var(--gray-color);
+  --o-transition: all 0.26s ease-in-out;
+}
+
+#content {
+  background-color: var(--bg-black);
+}
+
 /*About Us Banner Start*/
 .banner {
   background-image: url("../images/about-us.png");
@@ -33,3 +51,142 @@
 }
 
 /*About Us Banner End*/
+/*about-content Start*/
+.about-content {
+  background-color: var(--bg-black);
+}
+.about-content .left h2 {
+  color: var(--white-color);
+  font-family: var(--font-primary);
+  font-size: 44px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 130.5%; /* 62.64px */
+  margin-bottom: 42px;
+}
+.about-content .left .sub-header {
+  color: var(--primary-color);
+
+  /* BODY TEXT */
+  font-family: var(--font-secondary);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 15px;
+}
+.about-content .left .content {
+  color: var(--gray-color);
+
+  font-family: var(--font-secondary);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 62px;
+}
+.about-content .left .statstics .num {
+  color: var(--primary-color);
+
+  font-family: var(--font-title);
+  font-size: 67.2px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-bottom: 0px;
+}
+.about-content .left .statstics .text {
+  color: var(--white-color);
+
+  /* H6 */
+  font-family: var(--font-primary);
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.about-content .right .text {
+  color: var(--gray-color);
+
+  /* Samar 18 */
+  font-family: var(--font-secondary);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 52px;
+}
+.about-content .right h2 {
+  color: var(--white-color);
+  font-family: var(--font-primary);
+  font-size: 44px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+  margin-bottom: 62px;
+}
+.statstics .image {
+  width: 107px;
+}
+.statstics .image img {
+  width: 100%;
+}
+.statstics .image p {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 48px;
+  color: white;
+  font-weight: 900;
+}
+.about-content .right .statstics .description {
+  color: var(--white-color);
+
+  /* H5 */
+  font-family: var(--font-primary);
+  font-size: 17.26px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.about-content .right .statstics .description .highlight {
+  color: var(--primary-color);
+  font-family: var(--font-secondary);
+  font-size: 14.4px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+/*about-content End*/
+
+/*Story Start*/
+.story {
+  background-color: rgba(24, 22, 22, 0.5);
+}
+.story .info img {
+  width: 130px;
+}
+.story .info p {
+  color: var(--white-color);
+
+  font-family: var(--font-primary);
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 117%; /* 56.16px */
+}
+.story .ceo a {
+  color: var(--primary-color);
+
+  font-family: var(--font-secondary);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-decoration: none;
+  text-align: center;
+}
+
+/*Story End*/
