--- a/css/projects.css
+++ b/css/projects.css
@@ -123,7 +123,7 @@
 
 /*Story Start*/
 .story {
-  background-color: var(--bg-black);
+  /* background-color: var(--bg-black); */
 }
 .story .info img {
   width: 130px;
